kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  annotations:
    cloud.google.com/backend-config: '{"default": "nginx-backendconfig"}'

spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
